--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,84 @@
-html, body {
+* {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f0f0f0;
+    font-family: 'Poppins', sans-serif;
 }
 
+html, body {
+    display: grid;
+    height: 100%;
+    background: #000;
+}
 .container {
-    width: 350px;
-    height: 200px; 
-    background-color: #3C5B6F;
-    color: #fff;
+    width: 360px;
+    height: auto;
+    margin: auto;
+    border-radius: 4px;
+    border: 1px solid linear-gradient(135deg, #14ffe9, #ffeb3b, #ff00e0);
+    background-color: #414141cf;
+    color: #ff0;
+}
+.wrapper {
+    height: 100px;
+    width: 360px;
+    position: relative;
     border-radius: 10px;
-    margin: 200px auto; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center; 
-    align-items: center; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
+
+.wrapper .display,
+.wrapper span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.wrapper .display {
+    z-index: 999;
+    height: 85px;
+    width: 345px;
+    background: #1b1b1b;
+    border-radius: 6px;
+    text-align: center;
 }
 
 #clock {
-    font-size: 3rem; 
-    text-align: center;
-    padding: 20px;
-    margin-bottom: 20px; 
+    line-height: 1.8;
+    color: #fff;
+    font-size: 50px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    background: linear-gradient(135deg, #14ffe9, #ffeb3b, #ff00e0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 #controls {
     display: flex;
-    flex-direction: column; 
-    justify-content: center; 
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
 }
 
-input[type="radio"] {
-    margin: 0 10px; 
-    cursor: pointer;
+.alarm {
+    margin-top: 10px;
+    text-align: center;
+    gap: 10px;
+    border: none;
 }
 
-.label {
-    font-size: 1rem; 
-    color: #ddd; 
-    margin-right: 10px;
+.alarm-controls {
+    margin: 10px;
+}
+
+button {
+    background-color: #000;
+    color: #ffeb3b;
+    padding: 0 10px;
+    border-radius: 4px;
+    font-weight: 600;
+}
+
+.hidden {
+    display: none;
 }
