--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,13 @@ button {
     padding: 0 10px;
     border-radius: 4px;
     font-weight: 600;
+    border: none;
+}
+
+#alarm-input {
+    height: 14px;
+    margin-right: 10px;
+    border: none;
 }
 
 .hidden {
